--- a/Profiles/Profiles.html
+++ b/Profiles/Profiles.html
@@ -146,6 +146,9 @@
 
 <script type="text/javascript">
 
+	/*
+	* 切换tab标签
+	* */
 	function clickTab(e) {
 		let id = e.target.id;
 		$('.right_content').hide();
@@ -174,5 +177,6 @@
 		}
 	}
 </script>
+<script src="../assets/commonJs.js"></script>
 </body>
 </html>
