--- a/Profiles/Profiles.html
+++ b/Profiles/Profiles.html
@@ -62,11 +62,66 @@
 			<div class="right">
 				<!--购物车内容-->
 				<div class="right_content shopCar">
-					购物车内容
+					<div class="order_block">
+						<!--订单头部-->
+						<div class="goods_header">
+							<input type="checkbox" name="goods_checkbox"/>
+							<!--订单时间-->
+							<div class="shop_name">店铺名称：nmsl店铺</div>
+						</div>
+						<div class="goods_content">
+							<!--订单图片-->
+							<div class="goods_logo"></div>
+							<div class="goods_container">
+								<!--订单标题-->
+								<div class="order_title">我是一个订单标题</div>
+								<div class="order_price fg f12">价格：￥99元</div>
+							</div>
+							<!--计算属性-->
+							<div class="counter">
+								<div class="decrease">-</div>
+								<input class="form-control form-control-sm counter-input" type="text" value="1 ">
+								<div class="increase">+</div>
+							</div>
+							<!--总价格-->
+							<div class="total-price">￥99</div>
+						</div>
+					</div>
 				</div>
 				<!--我的收藏-->
 				<div class="right_content myCollect unshow">
-					我的收藏
+					<div class="collect_container">
+						<div class="collect_block">
+							<div class="block_pic"></div>
+							<div class="block_title">我是一个收藏商品标题</div>
+							<div class="block_price">￥99元</div>
+						</div>
+						<div class="collect_block">
+							<div class="block_pic"></div>
+							<div class="block_title">我是一个收藏商品标题</div>
+							<div class="block_price">￥99元</div>
+						</div>
+						<div class="collect_block">
+							<div class="block_pic"></div>
+							<div class="block_title">我是一个收藏商品标题</div>
+							<div class="block_price">￥99元</div>
+						</div>
+						<div class="collect_block">
+							<div class="block_pic"></div>
+							<div class="block_title">我是一个收藏商品标题</div>
+							<div class="block_price">￥99元</div>
+						</div>
+						<div class="collect_block">
+							<div class="block_pic"></div>
+							<div class="block_title">我是一个收藏商品标题</div>
+							<div class="block_price">￥99元</div>
+						</div>
+						<div class="collect_block">
+							<div class="block_pic"></div>
+							<div class="block_title">我是一个收藏商品标题</div>
+							<div class="block_price">￥99元</div>
+						</div>
+					</div>
 				</div>
 				<!--信息-->
 				<div class="right_content message unshow">
@@ -145,37 +200,42 @@
 </div>
 
 <script type="text/javascript">
+    $(function () {
+        //默认选中第一个tab
+        $('.shopCar').show();
+        $("#shopCar").addClass("tabActive")
+    })
 
-	/*
+    /*
 	* 切换tab标签
 	* */
-	function clickTab(e) {
-		let id = e.target.id;
-		$('.right_content').hide();
-		$(".tab").removeClass("tabActive");
-		switch (id) {
-			case 'shopCar':
-				$('.shopCar').show();
-				$("#shopCar").addClass("tabActive")
-				break;
-			case 'myCollect':
-				$('.myCollect').show();
-				$("#myCollect").addClass("tabActive")
-				break;
-			case 'message':
-				$('.message').show();
-				$("#message").addClass("tabActive")
-				break;
-			case 'acountSetting':
-				$('.acountSetting').show();
-				$("#acountSetting").addClass("tabActive")
-				break;
-			case 'orderManage':
-				$('.orderManage').show();
-				$("#orderManage").addClass("tabActive")
-				break;
-		}
-	}
+    function clickTab(e) {
+        let id = e.target.id;
+        $('.right_content').hide();
+        $(".tab").removeClass("tabActive");
+        switch (id) {
+            case 'shopCar':
+                $('.shopCar').show();
+                $("#shopCar").addClass("tabActive")
+                break;
+            case 'myCollect':
+                $('.myCollect').show();
+                $("#myCollect").addClass("tabActive")
+                break;
+            case 'message':
+                $('.message').show();
+                $("#message").addClass("tabActive")
+                break;
+            case 'acountSetting':
+                $('.acountSetting').show();
+                $("#acountSetting").addClass("tabActive")
+                break;
+            case 'orderManage':
+                $('.orderManage').show();
+                $("#orderManage").addClass("tabActive")
+                break;
+        }
+    }
 </script>
 <script src="../assets/commonJs.js"></script>
 </body>
