购物车完善

--- a/Detail/Detail.html
+++ b/Detail/Detail.html
@@ -11,7 +11,7 @@
 	        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 	        crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="Detail.css">
-	<link rel="stylesheet" href="../assets/coomonCss.css">
+	<link rel="stylesheet" href="../assets/commonCss.css">
 	<title>商品详情</title>
 </head>
 <body>
