--- a/login/Login.html
+++ b/login/Login.html
@@ -13,7 +13,7 @@
 	        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 	        crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="Login.css">
-	<link rel="stylesheet" href="../assets/coomonCss.css">
+	<link rel="stylesheet" href="../assets/commonCss.css">
 	<title>登录页面</title>
 </head>
 <body>
