--- a/Profiles/Profiles.html
+++ b/Profiles/Profiles.html
@@ -13,7 +13,7 @@
 	        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 	        crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="Profiles.css">
-	<link rel="stylesheet" href="../assets/coomonCss.css">
+	<link rel="stylesheet" href="../assets/commonCss.css">
 	<title>会员中心</title>
 </head>
 <body>
@@ -65,7 +65,7 @@
 					<div class="order_block">
 						<!--订单头部-->
 						<div class="goods_header">
-							<input type="checkbox" name="goods_checkbox"/>
+							<input type="checkbox" name="goods_checkbox" onclick="checkbox_choose(event,99)"/>
 							<!--订单时间-->
 							<div class="shop_name">店铺名称：nmsl店铺</div>
 						</div>
@@ -77,12 +77,87 @@
 								<div class="order_title">我是一个订单标题</div>
 								<div class="order_price fg f12">价格：￥99元</div>
 							</div>
-							<!--计算属性-->
-							<div class="counter">
-								<div class="decrease">-</div>
-								<input class="form-control form-control-sm counter-input" type="text" value="1 ">
-								<div class="increase">+</div>
+							<!--&lt;!&ndash;计算属性&ndash;&gt;-->
+							<!--<div class="counter">-->
+							<!--	<div class="decrease" id="shop_1" onclick="decrease(event)">-</div>-->
+							<!--	<input class="form-control form-control-sm counter-input" name="shop_1" type="text" value="1 ">-->
+							<!--	<div class="increase">+</div>-->
+							<!--</div>-->
+							<!--总价格-->
+							<div class="total-price">￥99</div>
+						</div>
+					</div>
+					<div class="order_block">
+						<!--订单头部-->
+						<div class="goods_header">
+							<input type="checkbox" name="goods_checkbox" onclick="checkbox_choose(event,99)"/>
+							<!--订单时间-->
+							<div class="shop_name">店铺名称：nmsl店铺</div>
+						</div>
+						<div class="goods_content">
+							<!--订单图片-->
+							<div class="goods_logo"></div>
+							<div class="goods_container">
+								<!--订单标题-->
+								<div class="order_title">我是一个订单标题</div>
+								<div class="order_price fg f12">价格：￥99元</div>
 							</div>
+							<!--&lt;!&ndash;计算属性&ndash;&gt;-->
+							<!--<div class="counter">-->
+							<!--	<div class="decrease" id="shop_1" onclick="decrease(event)">-</div>-->
+							<!--	<input class="form-control form-control-sm counter-input" name="shop_1" type="text" value="1 ">-->
+							<!--	<div class="increase">+</div>-->
+							<!--</div>-->
+							<!--总价格-->
+							<div class="total-price">￥99</div>
+						</div>
+					</div>
+					<div class="order_block">
+						<!--订单头部-->
+						<div class="goods_header">
+							<input type="checkbox" name="goods_checkbox" onclick="checkbox_choose(event,99)"/>
+							<!--订单时间-->
+							<div class="shop_name">店铺名称：nmsl店铺</div>
+						</div>
+						<div class="goods_content">
+							<!--订单图片-->
+							<div class="goods_logo"></div>
+							<div class="goods_container">
+								<!--订单标题-->
+								<div class="order_title">我是一个订单标题</div>
+								<div class="order_price fg f12">价格：￥99元</div>
+							</div>
+							<!--&lt;!&ndash;计算属性&ndash;&gt;-->
+							<!--<div class="counter">-->
+							<!--	<div class="decrease" id="shop_1" onclick="decrease(event)">-</div>-->
+							<!--	<input class="form-control form-control-sm counter-input" name="shop_1" type="text" value="1 ">-->
+							<!--	<div class="increase">+</div>-->
+							<!--</div>-->
+							<!--总价格-->
+							<div class="total-price">￥99</div>
+						</div>
+					</div>
+					<div class="order_block">
+						<!--订单头部-->
+						<div class="goods_header">
+							<input type="checkbox" name="goods_checkbox" onclick="checkbox_choose(event,99)"/>
+							<!--订单时间-->
+							<div class="shop_name">店铺名称：nmsl店铺</div>
+						</div>
+						<div class="goods_content">
+							<!--订单图片-->
+							<div class="goods_logo"></div>
+							<div class="goods_container">
+								<!--订单标题-->
+								<div class="order_title">我是一个订单标题</div>
+								<div class="order_price fg f12">价格：￥99元</div>
+							</div>
+							<!--&lt;!&ndash;计算属性&ndash;&gt;-->
+							<!--<div class="counter">-->
+							<!--	<div class="decrease" id="shop_1" onclick="decrease(event)">-</div>-->
+							<!--	<input class="form-control form-control-sm counter-input" name="shop_1" type="text" value="1 ">-->
+							<!--	<div class="increase">+</div>-->
+							<!--</div>-->
 							<!--总价格-->
 							<div class="total-price">￥99</div>
 						</div>
@@ -194,49 +269,19 @@
 						</div>
 					</div>
 				</div>
+				
+				<!--购物车 选择后总价格栏目-->
+				<div class="right_content totalPrice">
+					总价格：￥
+					<span class="rf fw500 f20 choose_price" id="total_price">0</span>
+					元
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
 
-<script type="text/javascript">
-    $(function () {
-        //默认选中第一个tab
-        $('.shopCar').show();
-        $("#shopCar").addClass("tabActive")
-    })
-
-    /*
-	* 切换tab标签
-	* */
-    function clickTab(e) {
-        let id = e.target.id;
-        $('.right_content').hide();
-        $(".tab").removeClass("tabActive");
-        switch (id) {
-            case 'shopCar':
-                $('.shopCar').show();
-                $("#shopCar").addClass("tabActive")
-                break;
-            case 'myCollect':
-                $('.myCollect').show();
-                $("#myCollect").addClass("tabActive")
-                break;
-            case 'message':
-                $('.message').show();
-                $("#message").addClass("tabActive")
-                break;
-            case 'acountSetting':
-                $('.acountSetting').show();
-                $("#acountSetting").addClass("tabActive")
-                break;
-            case 'orderManage':
-                $('.orderManage').show();
-                $("#orderManage").addClass("tabActive")
-                break;
-        }
-    }
-</script>
+<script src="Profiles.js"></script>
 <script src="../assets/commonJs.js"></script>
 </body>
 </html>
