--- a/index/index.html
+++ b/index/index.html
@@ -13,7 +13,7 @@
 	        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 	        crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="index.css">
-	<link rel="stylesheet" href="../assets/coomonCss.css">
+	<link rel="stylesheet" href="../assets/commonCss.css">
 	<title>首页</title>
 </head>
 <body>
